--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "@babel/preset-env": "^7.19.1",
     "babel-jest": "^29.0.3",
     "jest": "^29.0.3"
+  },
+  "dependencies": {
+    "winston":"^3.7.2"
   }
 }
