--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jest": "^29.0.3"
   },
   "dependencies": {
-    "winston":"^3.7.2"
+    "winston":"^3.7.2",
+    "winston-daily-rotate-file":"^4.7.1"
   }
 }
