--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nodejs_unit-test",
+  "name": "nodejs_unit-express",
   "version": "1.0.0",
-  "description": "Belajar node js unit test;",
+  "description": "Belajar node js express",
   "main": "./src/index.js",
   "type": "module",
   "scripts": {
@@ -47,10 +47,12 @@
     "@babel/plugin-transform-runtime": "^7.19.1",
     "@babel/preset-env": "^7.19.1",
     "babel-jest": "^29.0.3",
-    "jest": "^29.0.3"
+    "jest": "^29.0.3",
+    "supertest":"^6.2.4"
   },
   "dependencies": {
     "winston":"^3.7.2",
-    "winston-daily-rotate-file":"^4.7.1"
+    "winston-daily-rotate-file":"^4.7.1",
+    "express":"^4.18.1"
   }
 }
