--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "winston":"^3.7.2",
     "winston-daily-rotate-file":"^4.7.1",
-    "express":"^4.18.1"
+    "express":"^4.18.1",
+    "cookie-parser":"^1.4.6"
   }
 }
